$geometry MultiLineString re-parsing error

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • 45
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      [j0:prim] | 2024-01-04T07:01:58.990+00:00 E  ASSERT   4457000 [conn36] "Tripwire assertion","attr":{"error":{"code":7349401,"codeName":"Location7349401","errmsg":"Was not able to re-parse queryStats key when reading queryStats.Status BadValue: Could not re-parse a representative query shape :: caused by :: GeoJSON LineString must have at least 2 vertices, instead got 0 vertices: [] Hash: 13075023414999675288 Query Shape: { cmdNs: { db: \"test\", coll: \"jstests_nin\" }, command: \"find\", filter: { testDB: { $geoIntersects: { $geometry: { type: \"MultiLineString\", coordinates: [ [] ] } } } } }"},"location":"{fileName:\"src/mongo/db/pipeline/document_source_query_stats.cpp\", line:254, functionName:\"toDocument\"}"}

      The representative value for MultiLineString needs to be specified to be something re-parseable in expression_geo_serializer.cpp.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: