SERVER-84566 Fix re-parsing errors for complex geometry types (#17883)

GitOrigin-RevId: 78dd5e00149bc1f0043e9a03e4a260633bb01631